--- a/styles.css
+++ b/styles.css
@@ -1,106 +1,121 @@
 :root {
-    --clr-black: #222;
-    --ff-primary: "Roboto", sans-serif;
-    --ff-secondary: "Open Sans", sans-serif;
-    --transition: all 0.3s linear;
-    --spacing: 0.1rem;
-    --radius: 0.25rem;
-    --max-width: 1170px;
-    --fixed-width: 620px;
-  }
-  /*
-  =============== 
-  Global Styles
-  ===============
-  */
-  
-  *,
-  ::after,
-  ::before {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+  --clr-black: #222;
+  --ff-primary: "Roboto", sans-serif;
+  --ff-secondary: "Open Sans", sans-serif;
+  --transition: all 0.3s linear;
+  --spacing: 0.1rem;
+  --radius: 0.25rem;
+  --max-width: 1170px;
+  --fixed-width: 620px;
+}
+
+*,
+::after,
+::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: var(--ff-secondary);
+  background: radial-gradient(
+    circle at 24.1% 68.8%,
+    rgb(50, 50, 50) 0%,
+    rgb(0, 0, 0) 99.4%
+  );
+  color: #dbd8e3;
+  line-height: 1.5;
+  font-size: 0.875rem;
+}
+@media screen and (min-width: 800px) {
   body {
-    font-family: var(--ff-secondary);
-    background: radial-gradient(circle at 24.1% 68.8%, rgb(50, 50, 50) 0%, rgb(0, 0, 0) 99.4%);;
-    color: #dbd8e3;
-    line-height: 1.5;
-    font-size: 0.875rem;
+    font-size: 1rem;
   }
-  @media screen and (min-width: 800px) {
-    body {
-      font-size: 1rem;
-    }
-  }
-  /*  global classes */
-  
-  /* section */
-  .section {
-    padding: 5rem 0;
-  }
-  
+}
+/*  global classes */
+
+/* section */
+.section {
+  padding: 5rem 0;
+}
+
+.section-center {
+  width: 90vw;
+  margin: 0 auto;
+  max-width: 1170px;
+}
+@media screen and (min-width: 992px) {
   .section-center {
-    width: 90vw;
-    margin: 0 auto;
-    max-width: 1170px;
+    width: 95vw;
   }
-  @media screen and (min-width: 992px) {
-    .section-center {
-      width: 95vw;
-    }
-  }
-  main {
-    min-height: 100vh;
-    display: grid;
-    place-items: center;
-  }
-  
-  /*
+}
+main {
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
+}
+
+/*
   =============== 
   Counter
   ===============
   */
-  
-  main {
-    min-height: 100vh;
-    display: grid;
-    place-items: center;
-  }
-  .container {
-    text-align: center;
-  }
-  #value {
-    font-size: 6rem;
-    font-weight: bold;
-  }
-  .btn {
-    text-transform: uppercase;
-    background: #dbd8e3;
-    color: #352f44;
-    padding: 0.575rem 0.95rem;
-    letter-spacing: var(--spacing);
-    display: inline-block;
-    transition: var(--transition);
-    font-size: 0.875rem;
-    border: 2px solid #dbd8e3;
-    box-shadow: 0 1px 3px #dbd8e3;
-    border-radius: var(--radius);
-    margin: 0.5rem;
-  }
-    .btn:active {
-    transform: scale(0.85);
-    }
-  .increase {
-    color: #dbd8e3;
-    background: #347474;
-    padding: 1.375rem 1.75rem;
-  }
-  .decrease {
-    color: #dbd8e3;
-    background: #dc2f2f;
-    padding: 1.375rem 1.75rem;
-  }
-  .saveCount {
-    margin-top: 100px;
-  }
+
+main {
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
+}
+.container {
+  text-align: center;
+}
+#value {
+  font-size: 6rem;
+  font-weight: bold;
+}
+.btn {
+  text-transform: uppercase;
+  background: #dbd8e3;
+  color: #352f44;
+  padding: 0.575rem 0.95rem;
+  letter-spacing: var(--spacing);
+  display: inline-block;
+  transition: var(--transition);
+  font-size: 0.875rem;
+  border: 2px solid #dbd8e3;
+  box-shadow: 0 1px 3px #dbd8e3;
+  border-radius: var(--radius);
+  margin: 0.5rem;
+}
+.btn:active {
+  transform: scale(0.85);
+}
+.increase {
+  color: #dbd8e3;
+  background: #347474;
+  padding: 1.375rem 1.75rem;
+}
+.decrease {
+  color: #dbd8e3;
+  background: #dc2f2f;
+  padding: 1.375rem 1.75rem;
+}
+.saveCount {
+  margin-top: 100px;
+}
+
+.notification {
+  position: absolute;
+
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 10px;
+  border-radius: 5px;
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 0.5s ease-out, visibility 0.5s ease-out; /* Add visibility transition */
+}
+.notification.fade-out {
+  opacity: 0;
+  visibility: hidden;
+}
